<resources>
    <string name="app_name">Pokayoke BMW</string>
    <string name="title_activity_authdialog">activity_authdialog</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tvUser">Supervisor</string>
    <string name="etUser">Supervisor</string>
    <string name="btnAuthDialog">Ingresar</string>
    <string name="errorLabel">¡Error de versión incorrecta!</string>
    <string name="errorSublabel">Contacte al supervisor</string>
</resources>
